apps/staging/outline/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outline
  namespace: life
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - outline.christophervestman.com
      secretName: outline-tls
  rules:
    - host: outline.christophervestman.com
      http:
        paths:
          - backend:
              service:
                name: outline
                port:
                  number: 3000
            path: /
            pathType: Prefix
